Decrease margin bottom to prevent the item from being too high

--- a/public/style.css
+++ b/public/style.css
@@ -618,7 +618,7 @@ body.mobile .footer_hr {
   z-index: 1;
 }
 #PreschoolSection1 img[src$="White-wavy-bottom-border.png"] {
-  margin-bottom: -1px;
+  margin-bottom: -10px;
   padding-top: 20px;
 }
 
@@ -1227,7 +1227,7 @@ body.mobile #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) div#ch
 }
 #chabad_body_page:has(#chabad_left_colum, .chabad_left_colum) #content_banner::after {
   background-image: url(https://mendelgordon.github.io/chabad-org-preschool-4/dist/assets/img/illustrations/White-wavy-bottom-border.png);
-  margin-bottom: -1px;
+  margin-bottom: -10px;
   background-size: contain;
   width: 102%;
   aspect-ratio: 3199/126;
